--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -12,6 +12,12 @@
         <script src="../static/js/index.js"></script>
         <script src="../static/js/index_user.js"></script>
         <script src="../static/js/sign_up.js"></script>
+        <style>
+            .caption .btn-warning{
+                position: relative;
+                left:18px;
+            }
+        </style>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -44,7 +50,7 @@
                         <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><strong class="info" id="movie_show_1_title">{{movie_show_1_title}}</strong></a><br>
                             <strong class="info" id="movie_show_1_score">豆瓣评分：{{movie_show_1_score}}</strong><br>
@@ -59,7 +65,7 @@
                         <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><strong class="info" id="movie_show_2_title">{{movie_show_2_title}}</strong></a><br>
                             <strong class="info" id="movie_show_2_score">豆瓣评分：{{movie_show_2_score}}</strong><br>
@@ -74,7 +80,7 @@
                         <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><strong class="info" id="movie_show_3_title">{{movie_show_3_title}}</strong></a><br>
                             <strong class="info" id="movie_show_3_score">豆瓣评分：{{movie_show_3_score}}</strong><br>
@@ -89,7 +95,7 @@
                         <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><strong class="info" id="movie_show_4_title">{{movie_show_4_title}}</strong></a><br>
                             <strong class="info" id="movie_show_4_score">豆瓣评分：{{movie_show_4_score}}</strong><br>
@@ -104,7 +110,7 @@
                         <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><strong class="info" id="movie_show_5_title">{{movie_show_5_title}}</strong></a><br>
                             <strong class="info" id="movie_show_5_score">豆瓣评分：{{movie_show_5_score}}</strong><br>
@@ -119,7 +125,7 @@
                         <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><strong class="info" id="movie_show_6_title">{{movie_show_6_title}}</strong></a><br>
                             <strong class="info" id="movie_show_6_score">豆瓣评分：{{movie_show_6_score}}</strong><br>
@@ -136,7 +142,7 @@
                         <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><strong class="info" id="movie_show_7_title">{{movie_show_7_title}}</strong></a><br>
                             <strong class="info" id="movie_show_7_score">豆瓣评分：{{movie_show_7_score}}</strong><br>
@@ -151,7 +157,7 @@
                         <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><strong class="info" id="movie_show_8_title">{{movie_show_8_title}}</strong></a><br>
                             <strong class="info" id="movie_show_8_score">豆瓣评分：{{movie_show_8_score}}</strong><br>
@@ -166,7 +172,7 @@
                         <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><strong class="info" id="movie_show_9_title">{{movie_show_9_title}}</strong></a><br>
                             <strong class="info" id="movie_show_9_score">豆瓣评分：{{movie_show_9_score}}</strong><br>
@@ -181,7 +187,7 @@
                         <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><strong class="info" id="movie_show_10_title">{{movie_show_10_title}}</strong></a><br>
                             <strong class="info" id="movie_show_10_score">豆瓣评分：{{movie_show_10_score}}</strong><br>
@@ -196,7 +202,7 @@
                         <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><strong class="info" id="movie_show_11_title">{{movie_show_11_title}}</strong></a><br>
                             <strong class="info" id="movie_show_11_score">豆瓣评分：{{movie_show_11_score}}</strong><br>
@@ -211,7 +217,7 @@
                         <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
                         <div class="caption">
                             <button class="btn btn-success btn-sm">我喜欢</button>&nbsp;
-                            <button class="btn btn-warning btn-sm">不喜欢</button>
+                            <button class="btn btn-warning btn-sm">我看过</button>
                             <br>
                             <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><strong class="info" id="movie_show_12_title">{{movie_show_12_title}}</strong></a><br>
                             <strong class="info" id="movie_show_12_score">豆瓣评分：{{movie_show_12_score}}</strong><br>
