--- a/Sign/templates/Movie.html
+++ b/Sign/templates/Movie.html
@@ -53,7 +53,15 @@
                 <p class="text-center"><h3>评论区</h3></p>
             </div>
             <div class="Input_Box">
-                <textarea class="Input_text" placeholder="请登录后再进行评论" disabled></textarea>
+                <textarea class="Input_Box" placeholder="请登录后再进行评论" disabled></textarea>
+            </div>
+        </div>
+        <br>
+        <div class="container" id = "center6">
+            <div class = "comment">
+                <hr>
+                <p class="comment-name" id="comment_name"><h3>{{comment_name}}:</h3></p>
+                <p class="comment-message" id="comment_message"><h5>    {{comment_message}}</h5></p>
             </div>
         </div>
         <script>
