--- a/Sign/templates/Movie_User.html
+++ b/Sign/templates/Movie_User.html
@@ -66,6 +66,14 @@
                 <div class="Input_Foot"> <a class="postBtn">确定</a> </div>
             </div>
         </div>
+        <br>
+        <div class="container" id = "center6">
+            <div class = "comment">
+                <hr>
+                <p class="comment-name" id="comment_name"><h3>{{comment_name}}:</h3></p>
+                <p class="comment-message" id="comment_message"><h5>    {{comment_message}}</h5></p>
+            </div>
+        </div>
         <script>
             var info_tags = {'导演':'diretor','编剧':'screenwriter','类型':'types',
             '主演':'actor','官方网站':'website','制片国家/地区':'country',
