--- a/Sign/templates/search.html
+++ b/Sign/templates/search.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>搜索结果</title>
-    <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="../static/css/another.css">
-    <link type="text/css" rel="stylesheet" href="../static/css/index.css">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/another.js"></script>
-    <script src="../static/js/index.js"></script>
-    <script src="../static/js/sign_up.js"></script>
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/index/">
-                    <img src="../static/image/logo.png" alt="Brand" class="img-circle img-responsive">
-                </a>
-                <form method="get" action="/search/">
-                    {% csrf_token %}
-                    <input type="search" placeholder="搜索" required="required" name="search_key"><button type="submit">搜索</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <div class="container" id="center4">
-        {% for movie in movie_list %}
-            <div class="row">
-                <div class="col-sm-4 col-md-2">
-                    <div class="thumbnail">
-                        <a href="../movie/{{movie.id}}" id="movie_{{movie.id}}_id"><img src="../static/items/{{movie.picture}}" alt="{{movie.id}}" title="{{movie.title}}" id="movie_{{movie.id}}_picture">
-                            <div class="caption">
-                                <a href="../movie/{{movie.id}}" id="movie_{{movie.id}}_id"><strong class="info" id="movie_{{movie.id}}_title">{{movie.title}}</strong></a><br>
-                                <strong class="info" id="movie_{{movie.id}}_score">豆瓣评分：{{movie.score}}</strong><br>
-                                <p class="info_2" id="movie_{{movie.id}}_type">类型：{{movie.type}}</p>
-                                <p class="info_2" id="movie_{{movie.id}}_country">国家/地区：{{movie.country}}</p>
-                            </div>
-                    </div>
+    <head>
+        <meta charset="utf-8"/>
+        <title>User</title>
+        <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
+        <link type="text/css" rel="stylesheet" href="../static/css/another.css">
+        <link type="text/css" rel="stylesheet" href="../static/css/index.css">
+        <link type="text/css" rel="stylesheet" href="../static/css/movie.css">
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script>
+        <script src="../static/js/index_user.js"></script>
+        <script src="../static/js/another.js"></script>
+        <script src="../static/js/movie.js"></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand">
+                        <img alt="Brand" class="img-circle img-responsive" id="logo">
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        {% include 'Navigation.html' %}
+                        <li>
+                            <a class="tips" id="signIn">登录</a>
+                        </li>
+                        <li>
+                            <a class="tips" id="signUp">注册</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        <div>
-        {% empty %}
-        <div class="col-sm-4 col-md-2">
-            无结果
+        </nav>
+        <div class="container" id="center4">
+            <br>
+            <div id = "_zone">
+                <h3>搜索结果</h3>
+                <div id = "Search_Movie"></div>
+            </div>
+            <script>
+                var Search_movie = {{Search_movie|safe}};
+                for (var key = 0;key < Search_movie.length();key++){
+                    if (key % 4 == 0)
+                        document.getElementById("Search_Movie").innerHTML += '<div class="row">';
+                    var output = '';
+                    output+='<div class="col-sm-4 col-md-2">';
+                    output+='    <div class="thumbnail">';
+                    output+='        <a href="../movie/'+ Search_movie[key].id +'"><img src="../static/items/'+ Search_movie[key].id +'" alt="'+ Search_movie[key].id +'" title="'+ Search_movie[key].id +'">';
+                    output+='        <a href="../movie/{{Search_move_'+ Search_movie[key].id +'_id}}"><strong>{{Search_move_'+ key.toString() +'_title}}</strong></a><br>';
+                    output+='        </div>';
+                    output+='    </div>';
+                    output+='</div>';
+                    document.getElementById("Search_Movie").innerHTML += output;
+                }
+            </script>
         </div>
-        {% endfor %}
-    </div>
-</body>
+    </body>
 </html>
