--- a/Sign/static/css/index.css
+++ b/Sign/static/css/index.css
@@ -13,3 +13,9 @@
     font-family:"华文中宋";
     color:rgb(5, 73, 136);
 }
+
+.info_3{
+    font-size:20px;
+    font-family:"华文中宋";
+    color:rgb(255, 11, 11);
+}
