--- a/Sign/templates/Index.html
+++ b/Sign/templates/Index.html
@@ -29,13 +29,9 @@
                         <li>
                             <a href="{{sign_up}}" class="tips">注册</a>
                         </li>
+                        {% include 'Search_input.html' %}
                     </ul>
                 </div>
-                <form method="get" action="/search/">
-                    {% csrf_token %}
-                    <input type="search" placeholder="搜索" required="required" name="search_key">
-                    <button type="submit">搜索</button>
-                </form>
             </div>
         </nav>
         <div class="container" id="center4">
