--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a class="tips" id="user" href="/user/{{now_user}}">{{now_user}}</p>
+                            <a class="tips" id="user" href="/user/{{now_user}}">{{now_user}}</a>
                         </li>
                         {% include 'Navigation.html' %}
                         <li>
@@ -39,13 +39,9 @@
                         <li>
                             <a href="{{sign_up}}" class="tips">注册</a>
                         </li>
+                        {% include 'Search_input.html' %}
                     </ul>
                 </div>
-                <form method="get" action="/search/">
-                    {% csrf_token %}
-                    <input type="search" placeholder="搜索" required="required" name="search_key">
-                    <button type="submit">搜索</button>
-                </form>
             </div>
         </nav>
         <div class="container" id="center4">
