--- a/Sign/templates/Movie.html
+++ b/Sign/templates/Movie.html
@@ -52,6 +52,20 @@
             <div row="comment-header">
                 <p class="text-center"><h3>评论区</h3></p>
             </div>
+            <div>
+                {% for comment in comment_list %}
+                    <div>{{comment.user_name}}</div>
+                    <textarea class="Input_text" id = "{{comment}}">{{comment.content}}</textarea>
+                    <div>           {{comment.date}}</div>
+                    <br>
+                {% empty %}
+                    <div class="col-sm-4 col-md-2">
+                        <p class="info_3">无评论</p>
+                    </div>
+                    <br>
+                    <br>
+                {% endfor %}
+            </div>
             <div class="Input_Box">
                 <textarea class="Input_Box" placeholder="请登录后再进行评论" disabled></textarea>
             </div>
