--- a/Sign/templates/Movie_User.html
+++ b/Sign/templates/Movie_User.html
@@ -60,11 +60,30 @@
             <div row="comment-header">
                 <p class="text-center"><h3>评论区</h3></p>
             </div>
-            <div class="Input_Box">
-                <textarea class="Input_text" id = "{{post_comment}}"></textarea>
-                <div class="Input_Foot"> 
-                    <button type="button" class="btn btn-primary btn-block" id="post up" onclick="postComment()">确定</button> 
-                </div>
+            <div>
+                {% for comment in comment_list %}
+                    <div>{{comment.user_name}}</div>
+                    <textarea class="Input_text" id = "{{comment}}">{{comment.content}}</textarea>
+                    <div>           {{comment.date}}</div>
+                    <br>
+                {% empty %}
+                    <div class="col-sm-4 col-md-2">
+                        <p class="info_3">无评论</p>
+                    </div>
+                    <br>
+                    <br>
+                {% endfor %}
+            </div>
+            <div>
+                <form action="#" method="POST">
+                    {% csrf_token %}
+                    <div class="Input_Box">
+                        <textarea class="Input_text" id = "{{post_comment}}" name="post_comment"></textarea>
+                        <div class="Input_Foot">
+                            <button type="sumbit" class="btn btn-primary btn-block" id="post up">确定</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
         <br>
