修改了前端
搜索结果一行显示5部电影

--- a/Sign/static/css/another.css
+++ b/Sign/static/css/another.css
@@ -41,6 +41,9 @@ img{
 .search_area > form > div > input{
     font-size:15px;
 }
+.search_area > form{
+    margin-top:8px;
+}
 
 .container .row > div > .thumbnail{
     border: none;
